--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="C:\Users\Jared.DESKTOP-BH23OF8\iCloudPhotos\Photos\8190DC1C-38E2-4F28-B83E-3F04F00AE842.jpg"
+                <td><img src="C:"Profile.jpg"
                     width="150px"
                     height="150px"></td>
                 <td><h1>Jared Eldridge</h1>
