--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
                     width="150px"
                     height="150px"></td>
                 <td><h1>Jared Eldridge</h1>
-                <p><em>Founder and CTO of <strong><a href="app-brewery.html">The App Brewery</a></strong></em></p></td>
+                <p><em>Student and stranger to <strong><a href="app-brewery.html">Software Engineering</a></strong></em></p></td>
             </tr>
         </table>
 
         <hr>
     <h3>Books and Teaching</h3>
     <ul>
-        <li>The Complete iOS App Development Bootcamp</li>
-        <li>The Complete Web Development Bootcamp</li>
+        <li>In the Process</li>
+        <li>Processing</li>
     </ul>
     <hr>
     <h3>Work Experience</h3>
@@ -34,12 +34,12 @@
 
             <tbody>
             <tr>
-                <td>2010-2013</td>
-                <td>Lead Developer at Tempo App</td>
+                <td>2019-2022</td>
+                <td>Hybrid operator at Starship Technology</td>
             </tr>
             <tr>
-                <td>2010</td>
-                <td>Researcher at The Institue of Cognitive Neurosciences</td>
+                <td>2022-Current</td>
+                <td>Food Service Lead at Banner Health University</td>
             </tr>
             </tbody>
         </table>
