--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="image/Profile.jpg"
+                <td><img src="./image/Profile.jpg"
                     width="150px"
                     height="150px"></td>
                 <td><h1>Jared Eldridge</h1>
