--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="./image/Profile.jpg"
+                <td><img src="https://avatars.githubusercontent.com/u/117431134?s=400&u=d0350dae5fccb417833b66a7bcffd07a5b0fd48f&v=4"
                     width="150px"
                     height="150px"></td>
                 <td><h1>Jared Eldridge</h1>
